range.c: Fix an exception message in rb_range_beg_len

[Bug #17271]